ft/src/tui/tests/snapshots/notes_move_compose_renamed_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — O┌ move · 4/4 compose · 1 pending → archive.md ─────────┐           │
│           │  · H1  Archive                                       │           │
│  o     ope│  ·   H2  Old                                         │           │
│  m     mov│▶ + H1  Project  → Renamed Project                    │           │
│  r     res│                                                      │           │
│  c     cre│                                                      │           │
│  C     cre│                                                      │           │
│  t     ope│                                                      │           │
│  p     per│                                                      │           │
│  ?     sho│                                                      │           │
│  Esc   clo│                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │ ↑/↓ focus   Shift+↑/↓ reorder   ←/→ level   r rename │           │
│           └──────────────────────────────────────────────────────┘           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
