ft/src/tui/tests/snapshots/notes_move_multiselect_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│           ┌ move · 2/4 select · project.md ──────────────────────┐           │
│  o     ope│  □ H1  Project                                       │           │
│  m     mov│▶ ■   H2  Background                                  │           │
│  r     res│  ▣     H3  Details                                   │           │
│  c     cre│  □   H2  Tasks                                       │           │
│  C     cre│                                                      │           │
│  t     ope│                                                      │           │
│  p     per│                                                      │           │
│  ?     sho│                                                      │           │
│  Esc   clo│                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │   ↑/↓ focus   Space toggle   Enter next   Esc back   │           │
│           └──────────────────────────────────────────────────────┘           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
