ft/src/tui/tests/snapshots/notes_move_new_target_collision_prompt_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  r     reslice synth section                                                 │
│  c     create note (blank)                                                   │
│  C     create ┌ move · new target · collision ───────────────┐               │
│  t     open to│    target already exists: proj/existing.md   │               │
│  p     periodi│                                              │               │
│  ?     show th│  [O]verwrite     [U]se existing     [C]ancel │               │
│  Esc   close o│                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
