ft/src/tui/tests/snapshots/notes_move_new_target_filename_prompt_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  r     reslice synth section                                                 │
│  c     create note (blank)                                                   │
│  C     create ┌ move · new target · filename · proj.md → proj┐               │
│  t     open to│▏ filename: Q3-█                              │               │
│  p     periodi│                                              │               │
│  ?     show th│ Enter next   Esc back to folder   Ctrl+W dele│               │
│  Esc   close o│                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
