ft/src/tui/tests/snapshots/notes_move_new_target_template_picker_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ move · new target · template ────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││type to search…                             ││               │
│  r     reslice│└────────────────────────────────────────────┘│               │
│  c     create │┌ recent · type to search ───────────────────┐│               │
│  C     create ││▶ (no template / blank)                     ││               │
│  t     open to││  new.md                                    ││               │
│  p     periodi││  proj.md                                   ││               │
│  ?     show th││                                            ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │                                              │               │
│               │ Enter use template   Esc back to target picke│               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
