ft/src/tui/tests/snapshots/notes_move_source_picker_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ move · 1/4 source ───────────────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││project│                                    ││               │
│  r     reslice│└────────────────────────────────────────────┘│               │
│  c     create │┌ results ───────────────────────────────────┐│               │
│  C     create ││▶ project.md                                ││               │
│  t     open to││                                            ││               │
│  p     periodi││                                            ││               │
│  ?     show th││                                            ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │      Enter use source   Esc cancel move      │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
