ft/src/tui/tests/snapshots/notes_move_target_picker_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ move · 3/4 target · 1 from project.md ───────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││archive│                                    ││               │
│  r     reslice│└────────────────────────────────────────────┘│               │
│  c     create │┌ results ───────────────────────────────────┐│               │
│  C     create ││▶ archive.md                                ││               │
│  t     open to││                                            ││               │
│  p     periodi││                                            ││               │
│  ?     show th││                                            ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │ Enter use target   Ctrl+N new target   Esc ba│               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
