ft/src/tui/tests/snapshots/notes_open_picker_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ open · pick file / heading ──────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││project│                                    ││               │
│  r     reslice│└────────────────────────────────────────────┘│               │
│  c     create │┌ results ───────────────────────────────────┐│               │
│  C     create ││▶ project.md                                ││               │
│  t     open to││                                            ││               │
│  p     periodi││                                            ││               │
│  ?     show th││                                            ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │ Enter open in $EDITOR   Ctrl+O open in Obsidi│               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
