ft/src/tui/tests/snapshots/notes_open_picker_recents_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ open · pick file / heading ──────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││type to search…                             ││               │
│  r     reslice│└────────────────────────────────────────────┘│               │
│  c     create │┌ recent · type to search ───────────────────┐│               │
│  C     create ││▶ project.md                                ││               │
│  t     open to││  notes/daily.md                            ││               │
│  p     periodi││  inbox.md                                  ││               │
│  ?     show th││                                            ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │ Enter open in $EDITOR   Ctrl+O open in Obsidi│               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
