ft/src/tui/tests/snapshots/notes_periodic_leader_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  r     reslice synth s┌ periodic note · pick a period┐                       │
│  c     create note (bl│                              │                       │
│  C     create note fro│  d     daily                 │                       │
│  t     open today's da│  w     weekly                │                       │
│  p     periodic note ·│  m     monthly               │                       │
│  ?     show this help │  q     quarterly             │                       │
│  Esc   close overlay  │  y     yearly                │                       │
│                       │  Esc   cancel                │                       │
│                       │                              │                       │
│                       └──────────────────────────────┘                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
